--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.47.13",
     "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "https-proxy-agent": "^7.0.6",
     "localtunnel": "^2.0.2",
+    "mysql2": "^3.12.0",
     "node-telegram-bot-api": "^0.66.0"
   }
 }
